--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,38 @@
   text-align: right;
   font-weight: 700;
 }
+.userInput{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.selectState,
+.formname{
+  width: 21%;
+  border: 1px solid #999;
+  border-radius: 3px;
+  height: 38px;
+}
+.fileUpload {
+  border: 1px solid #999;
+  border-radius: 3px;
+  outline: none;
+  cursor: pointer;
+  text-shadow: 1px 1px #fff;
+  font-weight: 600;
+  width: 21%;
+  height: 38px;
+  padding: 3px;
+}
+.abbreviation{
+  width: 21%;
+  height: 38px;
+  outline: none;
+}
+
+
+
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
