--- a/src/App.css
+++ b/src/App.css
@@ -62,11 +62,74 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
+/* Cards design */
+.container-body {
+  margin: 0;
 
+}
+
+.nav-tabs {
+  border-bottom: 1px solid #dee2e6;
+  border-radius: 3px;
+  padding: 1rem 15px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.container-body .nav-tabs .nav-item.show .nav-link, 
+.container-body .nav-tabs .nav-link.active {
+  color: #fff;
+  background-color: hsla(0,0%,100%,.2);
+  transition: background-color .3s .2s;
+  border: 0;
+  border-radius: 0;
+} 
+.nav-tabs .nav-link:focus, 
+.nav-tabs .nav-link:hover {
+  color: #fff;
+  background-color: hsla(0,0%,100%,.2);
+  transition: background-color .3s .2s;
+  border: 0;
+  border-radius: 0;
+}
+.container-body .nav-tabs {
+  border: none;
+  background: linear-gradient(
+    60deg,#ab47bc,#7b1fa2);
+    margin: 0;
+    padding: 20px 20px 0;
+    border-radius: 0;
+    box-shadow: 0 5px 20px 0 rgb(0 0 0 / 20%), 0 13px 24px -11px rgb(156 39 176 / 60%);
+    z-index: 2;
+    position: relative;
+}
+.container-body .nav-link {
+  color: #fff;
+  padding: 10px 70px;
+
+}
+.register-container {
+  border: 0;
+  margin-bottom: 30px;
+  margin-top: -30px;
+  border-radius: 6px;
+  color: rgba(0,0,0,.87);
+  background: #fff;
+  width: 100%;
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 14%), 0 3px 1px -2px rgb(0 0 0 / 20%), 0 1px 5px 0 rgb(0 0 0 / 12%);
+  flex: 1 1 auto;
+  padding: 70px 1.25em 1.25em;
+  z-index: 1;
+}
 .App-link {
   color: #61dafb;
 }
-
+.card{
+  text-align: initial;
+}
+.card .description {
+  padding: 0 0 30px;
+}
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
