--- a/src/App.css
+++ b/src/App.css
@@ -71,9 +71,9 @@
 .nav-tabs {
   border-bottom: 1px solid #dee2e6;
   border-radius: 3px;
-  padding: 1rem 15px;
-  margin-left: 15px;
-  margin-right: 15px;
+  padding: 1rem 5px;
+  margin-left: 5px;
+  margin-right: 5px;
 }
 
 .container-body .nav-tabs .nav-item.show .nav-link, 
@@ -95,9 +95,9 @@
 .container-body .nav-tabs {
   border: none;
   background: linear-gradient(
-    60deg,#ab47bc,#7b1fa2);
+    60deg,#7b1fa2,#7b1fa2);
     margin: 0;
-    padding: 20px 20px 0;
+    padding: 10px 10px 0;
     border-radius: 0;
     box-shadow: 0 5px 20px 0 rgb(0 0 0 / 20%), 0 13px 24px -11px rgb(156 39 176 / 60%);
     z-index: 2;
