--- a/src/App.css
+++ b/src/App.css
@@ -138,3 +138,181 @@
     transform: rotate(360deg);
   }
 }
+
+/* Start of Steps */
+.steps .nav-tabs {
+  background: none;
+    box-shadow: none;
+}
+.steps .nav-tabs .nav-link {
+  background-color: #aaa;
+  color: #fff;
+  border: 0;
+  border-radius: 0;
+  z-index: 1;
+}
+
+.steps .nav-tabs .nav-link.active {
+  background-color: #aaa;
+  color: #fff;
+  border-color: #428bca #428bca #428bca transparent;
+  background-color: #428bca;
+  z-index: 1;
+  
+}
+
+.steps .nav-tabs .nav-link.active:after,
+.steps .nav-tabs .nav-link:after {
+  content: "\f0da";
+  color: #428bca;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: 78px;
+  position: absolute;
+  top: -17px;
+  right: -26px;
+  z-index: 2;
+  text-shadow: 3px 0px 0px #fff;
+}
+.steps .nav-tabs .nav-link:after  {
+  color: #aaa;
+
+}
+.steps .nav-tabs .nav-item {
+  position: relative;
+}
+.nav-pills.nav-wizard > li .nav-arrow {
+  position: absolute;
+  top: 0px;
+  right: -20px;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 20px 0 20px 20px;
+  border-color: transparent transparent transparent #eee;
+  z-index: 150;
+}
+.nav-pills.nav-wizard > li .nav-wedge {
+  position: absolute;
+  top: 0px;
+  left: -20px;
+  width: 0px;
+  height: 0px;
+  border-style: solid;
+  border-width: 20px 0 20px 20px;
+  border-color: #eee #eee #eee transparent;
+  z-index: 150;
+}
+.nav-pills.nav-wizard > li:hover .nav-arrow {
+  border-color: transparent transparent transparent #aaa;
+}
+
+/* End of Steps */
+/* owner styles */
+li.active > a.hidden-xs {
+  display: block!important;
+ }
+ li.active > a.visible-xs {
+   display: none!important; 
+ }
+ .nav-pills.nav-wizard > li {
+   position: relative;
+   overflow: visible;
+   border-right: 10px solid #fff;
+   border-left: 10px solid #fff;
+ }
+ .nav-pills.nav-wizard > li:first-child {
+   border-left: 0;
+ }
+ .nav-pills.nav-wizard > li:first-child a {
+   border-radius: 5px 0 0 5px;
+ }
+ .nav-pills.nav-wizard > li:last-child {
+   border-right: 0;
+ }
+ .nav-pills.nav-wizard > li:last-child a {
+   border-radius: 0 5px 5px 0;
+ }
+ .nav-pills.nav-wizard > li a {
+   border-radius: 0;
+   background-color: #eee;
+   padding: 10px;
+ }
+ .nav-pills.nav-wizard > li .nav-arrow {
+   position: absolute;
+   top: 0px;
+   right: -20px;
+   width: 0px;
+   height: 0px;
+   border-style: solid;
+   border-width: 20px 0 20px 20px;
+   border-color: transparent transparent transparent #eee;
+   z-index: 150;
+ }
+ .nav-pills.nav-wizard > li .nav-wedge {
+   position: absolute;
+   top: 0px;
+   left: -20px;
+   width: 0px;
+   height: 0px;
+   border-style: solid;
+   border-width: 20px 0 20px 20px;
+   border-color: #eee #eee #eee transparent;
+   z-index: 150;
+ }
+ .nav-pills.nav-wizard > li:hover .nav-arrow {
+   border-color: transparent transparent transparent #aaa;
+ }
+ .nav-pills.nav-wizard > li:hover .nav-wedge {
+   border-color: #aaa #aaa #aaa transparent;
+ }
+ .nav-pills.nav-wizard > li:hover a {
+   background-color: #aaa;
+   color: #fff;
+ }
+ .nav-pills.nav-wizard > li.active .nav-arrow {
+   border-color: transparent transparent transparent #428bca;
+ }
+ .nav-pills.nav-wizard > li.active .nav-wedge {
+   border-color: #428bca #428bca #428bca transparent;
+ }
+ .nav-pills.nav-wizard > li.active a {
+   background-color: #428bca;
+ }
+ /* CSS for Credit Card Payment form */
+ .credit-card-box .panel-title {
+     display: inline;
+     font-weight: bold;	
+ }
+ .credit-card-box .form-control.error {
+     border-color: red;
+     outline: 0;
+     box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(255,0,0,0.6);
+ }
+ .credit-card-box label.error {
+   font-weight: bold;
+   color: red;
+   padding: 2px 8px;
+   margin-top: 2px;
+ }
+ .credit-card-box .payment-errors {
+   font-weight: bold;
+   color: red;
+   padding: 2px 8px;
+   margin-top: 2px;
+ }
+ .credit-card-box label {
+     display: block;
+ }
+ 
+ .credit-card-box .display-tr {
+     display: table-row;
+ }
+ .credit-card-box .display-td {
+     display: table-cell;
+     vertical-align: middle;
+     width: 50%;
+ }
+ /* Just looks nicer */
+ .credit-card-box .panel-heading img {
+     min-width: 180px;
+ }
